--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#284B63</color>
     <color name="colorPrimaryDark">#3C6E71</color>
     <color name="colorAccent">#9BF46B</color>
+    <color name="offWhite">#F4F4F4</color>
 </resources>
