--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="dir_tab_width">40dp</dimen>
+
+    <dimen name="file_height">40dp</dimen>
 </resources>
