--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="dir_tab_width">40dp</dimen>
 
     <dimen name="file_height">40dp</dimen>
+
+    <dimen name="button_height">40dp</dimen>
 </resources>
