--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="file_height">40dp</dimen>
 
     <dimen name="button_height">40dp</dimen>
+
+    <dimen name="sound_cell_height">50dp</dimen>
 </resources>
