--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,20 +22,32 @@
             android:orientation="vertical"
             android:background="#FFF">
 
-            <ScrollView
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
-                <LinearLayout
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/queue_list"/>
+                    android:layout_height="match_parent">
 
-            </ScrollView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:id="@+id/queue_list"/>
 
-            <Button
+                </ScrollView>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/screen_frame"
+                    android:background="#FFF"/>
+
+            </FrameLayout>
+
+    <Button
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
                 android:id="@+id/play_button"
