--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,13 @@
 
         </LinearLayout>
 
+        <!-- Overlay -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/overlay"
+            android:background="#000"/>
+
         <!-- Drawer  -->
         <LinearLayout
             android:layout_width="match_parent"
